feat: wrap the terminal emulator with the window wrapper

--- a/src/app/components/applications/terminal-emulator/terminal-emulator.html
+++ b/src/app/components/applications/terminal-emulator/terminal-emulator.html
@@ -1,3 +1,5 @@
-<div #emulatorWrapper>
-    <div #emulator></div>
-</div>
+<app-window-wrapper>
+    <div #emulatorWrapper>
+        <div #emulator></div>
+    </div>
+</app-window-wrapper>
