feat: make the window wrapper draggable

--- a/src/app/components/applications/window-wrapper/window-wrapper.html
+++ b/src/app/components/applications/window-wrapper/window-wrapper.html
@@ -1,4 +1,4 @@
-<div class="window {{ size() }}-size">
+<div class="window {{ size() }}-size" cdkDrag>
     <div class="toolbar">
         <div class="controls">
             <div class="minimizer"><icon [path]="mdiWindowMinimize"></icon></div>
