feat: make the window wrapper can be dragged when holding its toolbar only

--- a/src/app/components/applications/window-wrapper/window-wrapper.html
+++ b/src/app/components/applications/window-wrapper/window-wrapper.html
@@ -1,5 +1,5 @@
 <div class="window {{ size() }}-size" cdkDrag>
-    <div class="toolbar">
+    <div class="toolbar" cdkDragHandle>
         <div class="controls">
             <div class="minimizer"><icon [path]="mdiWindowMinimize"></icon></div>
             <div class="maximizer"><icon [path]="mdiDockWindow"></icon></div>
