feat: adjust terminal emulator's prompt rendering

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,7 +2,7 @@
 </style>
 
 <div class="main-container">
-  <app-terminal-emulator [asciiArt]="catAsciiArt"></app-terminal-emulator>
+  <app-terminal-emulator [asciiArt]="ventiAsciiArt"></app-terminal-emulator>
 </div>
 
 <router-outlet />
