--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,5 +1,9 @@
 @reference "tailwindcss";
 
-.main-container {
+.main-view {
     @apply flex items-center justify-center h-dvh overflow-hidden;
+
+    &.bg-inazuma {
+        @apply bg-[url(/imgs/background-GI-Inazuma.jpg)];
+    }
 }
