--- a/src/app/components/applications/window-wrapper/window-wrapper.css
+++ b/src/app/components/applications/window-wrapper/window-wrapper.css
@@ -1,7 +1,11 @@
 @reference "tailwindcss";
 
 .window {
-    @apply min-w-2xl border border-gray-200;
+    @apply min-w-2xl border border-gray-200 bg-white;
+
+    &.glass {
+        @apply bg-none;
+    }
     
     &.small-size {
         @apply min-w-sm
