refactor: use the optimized image instead of background image

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -3,7 +3,7 @@
 .main-view {
     @apply flex items-center justify-center h-dvh overflow-hidden;
 
-    &.bg-inazuma {
-        @apply bg-[url(/imgs/background-GI-Inazuma.jpg)];
+    & > * {
+        @apply z-10;
     }
 }
