--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,7 +2,8 @@
 </style>
 
 <div class="main-container">
-  <div class="main-view bg-inazuma">
+  <img ngSrc="imgs/background-GI-Inazuma.jpg" fill class="background-image" />
+  <div class="main-view">
     <app-terminal-emulator [asciiArt]="ventiAsciiArt"></app-terminal-emulator>
   </div>
   <div class="taskbar"></div>
